src/objects/CntrbnMdl_ShoreTelCallLog__c.object
<CustomObject>
    <description>This object allows you to store the data for Shoretelcall contribution of each TSE on monthly basis</description>
    <fields>
        <fullName>Avg_Call_Hold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Avg_Call_Hold</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Calls__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Avg_Calls</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Talk_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Avg_Talk_Time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CntrbnMdl_ShoreTelCallLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contribution Model ShoreTelCallLog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Avg_Call_Hold__c</columns>
        <columns>Avg_Calls__c</columns>
        <columns>Avg_Talk_Time__c</columns>
        <columns>Month__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Month__c</columns>
        <columns>Avg_Call_Hold__c</columns>
        <columns>Avg_Calls__c</columns>
        <columns>Avg_Talk_Time__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>STCLN-{0000000}</displayFormat>
        <label>ShoreTelCallLog Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contribution Model ShoreTelCallLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>